# bazel_test

./: BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum
cmd/: BUILD.bazel
cmd/master/: BUILD.bazel
